--- a/Bio-OS/project.properties
+++ b/Bio-OS/project.properties
@@ -12,3 +12,5 @@
 
 # Project target.
 target=android-10
+android.library.reference.1=../Libraries/IOIOLib
+android.library.reference.2=../Libraries/IOIOLibBT
