Adds device permissions.

--- a/Bio-OS/project.properties
+++ b/Bio-OS/project.properties
@@ -12,5 +12,6 @@
 
 # Project target.
 target=android-10
-android.library.reference.1=../Libraries/IOIOLib
-android.library.reference.2=../Libraries/IOIOLibBT
+android.library.reference.1=..\\Libraries\\IOIOLib
+android.library.reference.2=..\\Libraries\\IOIOLibBT
+android.library.reference.3=../Libraries/IOIOLibAccessory
